[project]
name = "lark-sync"
version = "0.1.0"
description = "MCP server for bi-directional sync between Markdown files and Lark cloud documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "lark-oapi>=1.3.0",
    "markdown-it-py[plugins]>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
lark-sync = "lark_sync.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lark_sync"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["test_files"]
asyncio_mode = "auto"
